Version 1.11.6 - Merchena
-----------------------------
Core - General
  - Fixes a problem with template parsing and <head vs. <header


Version 1.11.5 - Puerto Ayora
-----------------------------
Core - General
  - Global Content Blocks (GCB's) can now only have letters and numbers in the name!!
  - Fixes to caching issues in MenuManager and module templates
  - Admin module actions now catch an exception
  - Fixes problem with error_reporting, takes error_reporting correctly from php.ini
  - Fixes problem with contentprecompile not being fired
  - Significant performance improvement in admin theme calculations (fixes silly error)
  - Fix typo in /lib/classes/module_support/modtemplates.inc.php
  - Fixes issue with compilation process of stylesheets when using smarty tags
  - Fixes issue with showtemplate=false causing ajax stuff to be called twice
  - Fixes issue with aliases on sectionheaders being navigable. (Now throws 404 error)
  - Modules can no longer be upgraded if the schema version in the database does not match the version.php file
     (this solves the problem of the modules being upgraded too early in the upgrade process)
  - Fixes problem with module_help links in the OneEleven admin theme
  - Fixes problem where CMSMS internal parser mixed <head to <header.
  - Module API method Lang(), no longer final.
  - Minor fix to cms_selflink

Core - News
  - Fixes issue with wildcard category arguments in the browsecat action
  - Removes redundant SearchResult method
  - Clean up main php file a bit

Core - Search
  - Fixes issue with detailpage parameter

Core - ThemeManager
  - On Import, now use // as a delimiter between theme name and item name, cuz smarty treets a : as a delimiter for a resource.

  
Version 1.11.4 - Fernandina
-----------------------------
Core - General
  - Fixes problem with cms_plugins not being found in the parser
  - cms_date_format plugin is no longer cachable
  - Removes more wiki url stuff